objects/My_Payee__c.object
<CustomObject>
    <fields>
        <fullName>My_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>My Account</label>
        <referenceTo>My_Account__c</referenceTo>
        <relationshipLabel>Payees</relationshipLabel>
        <relationshipName>Payees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Account_Number__c</fullName>
        <label>Payee Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_IFSC_Code__c</fullName>
        <label>Payee IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>My Payee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Payee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>